--- a/views/book.html
+++ b/views/book.html
@@ -1,51 +1,36 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>你关心的步行街头条</title>
+    <title>XueChen.Wang's Own Blog</title>
     <meta charset="utf-8">
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='/stylesheets/book.css' />
     <script src="./javascripts/jquery-1.9.1.min.js"></script>
     <script src="./javascripts/knockout-3.0_0.js"></script>
-    <script src="./javascripts/index.js"></script>
+    <script src="./javascripts/book.js"></script>
   </head>
   <body>
-	<div id="wrapper">
-		<div id="pagelet-nav">
-			<div class="nav-inner">
-				<div class="nav-logo">
-					<a href="/home" class="logo-box" title="你关心的步行街头条">
-						<img src="/images/logo.png" class="logo" alt="">
-					</a>
-				</div>
-				<div class="nav-title"></div>
-				<div class="nav-subtitle">欢迎回来, LA.Kobe.Bryant!</div>
-			</div>
-		</div>
-		<div id="container">
-			<div id="pagelet-feedlist">
-				<ul data-bind="foreach:TopicNewsList">
-			        <li class="item clearfix">
-						<div class="info">
-							<p class="title">
-								<a data-bind="attr:{href:link,title:title,'last-reply':lastReply},text:title"></a>
-							</p>
-						</div>
-						<p class="footer">
-							<span class="other">
-								<span class="reply">回复：<span class="red" data-bind="text:reply"></span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
-								<span class="read">阅读: <span class="grey" data-bind="text:read"></span></span>
-							</span>
-							<span class="footer-right">
-								<span>by:<a data-bind="attr:{href:authorLink,title:author},text:author"></a></span>
-								<span data-bind="text:createTime"></span>
-							</span>
-						</p>
-			        </li>
-				</ul>
-			</div>
-		</div>
-	</div>
-    	
-    </ul>
+  	<div class="outer-wrapper">
+  		<header class="section">
+  			
+  		</header>
+  		<main id="content-main" class="section">
+  			<h1 class="page-title">深入浅出ES6</h1>
+  			<div class="myframe">
+          
+        </div>
+        <div class="branding">
+          <h1>
+            <a class="logo" href="/">
+              <img src="/images/mdn-logo-mono.svg" alt="">
+              <span>HAN<span class="logo-hanson">S</span>ON</span>
+            </a>
+          </h1>
+        </div>
+        
+  		</main>
+  		<footer class="footer section">
+  			
+  		</footer>
+  	</div>
   </body>
 </html>
