update code for css3 learning.

--- a/views/book.html
+++ b/views/book.html
@@ -9,6 +9,255 @@
     <script src="./javascripts/book.js"></script>
   </head>
   <body>
+  <div class='container'>
+    <div class='window'></div>
+    <div class='raindrops'>
+      <div class='borders'>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+        <div class='border'></div>
+      </div>
+      <div class='drops'>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+        <div class='raindrop'></div>
+      </div>
+    </div>
+  </div>
   	<div class="outer-wrapper">
   		<header class="section">
   			
@@ -27,6 +276,7 @@
           </h1>
         </div>
         
+
   		</main>
   		<footer class="footer section">
   			
