--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,7 +2,9 @@ body {
   min-height: 100%;
   font: 12px/1.4 Arial,Helvetica,'Hiragino Sans GB','Microsoft YaHei',sans-serif;
   -webkit-font-smoothing: antialiased;
-  background: #f8f8f8;
+  background: #f8f8f8 url('/images/fengjing.jpg') no-repeat;
+  background-size:cover;
+  background-origin:border;
 }
 ol,ul{
 	list-style:none;
