--- a/views/book.html
+++ b/views/book.html
@@ -263,18 +263,20 @@
   			
   		</header>
   		<main id="content-main" class="section">
-  			<h1 class="page-title">深入浅出ES6</h1>
+  			<h1>
+              <a class="logo" href="/">
+                <span>HAN<span class="logo-hanson">S</span>ON</span>
+              </a>
+            </h1>
   			<div class="myframe">
+                <div class="myframe-text">
+                    Playing with Text-Shadow
+                </div>
+                
+            </div>
+<!--         <div class="branding">
           
-        </div>
-        <div class="branding">
-          <h1>
-            <a class="logo" href="/">
-              <img src="/images/mdn-logo-mono.svg" alt="">
-              <span>HAN<span class="logo-hanson">S</span>ON</span>
-            </a>
-          </h1>
-        </div>
+        </div> -->
         
 
   		</main>
