--- a/public/stylesheets/book.css
+++ b/public/stylesheets/book.css
@@ -1,27 +1,54 @@
+body {
+  min-height: 100%;
+  font: 12px/1.4 Arial,Helvetica,'Hiragino Sans GB','Microsoft YaHei',sans-serif;
+  -webkit-font-smoothing: antialiased;
+  background: #f8f8f8 url('/images/fengjing.jpg') no-repeat;
+  background-size:cover;
+  background-origin:border;
+}
+#content-main h1{
+  text-align:center;
+  font-size:40px;
+  color:blue;
+}
+.outer-wrapper{width:50vw;margin:0 auto;background:#fff;}
 @keyframes myframe{
-	0%	{background:red;};
-	25%	{background:blue;}
-	75%	{background:yellow;}
-	100%	{background:green;}
+  0%  {background:red;left:100px;};
+  25% {background:blue;;left:200px;}
+  75% {background:yellow;left:300px;}
+  100%  {background:green;left:400px;}
 
 }
-@-webkit-keyframes myfirst /* Safari and Chrome */
+@-webkit-keyframes myframe /* Safari and Chrome */
 {
-0%   {background:red;top:20px;left:10px;}
-25%  {background:yellow;top:50px;left:20px;}
-50%  {background:blue;top:100px;left:50px;}
-100% {background:green;top:120px;left:100px;}
+  0%  {background:red;left:100px;};
+  25% {background:blue;;left:200px;}
+  75% {background:yellow;left:300px;}
+  100%  {background:green;left:400px;}
 }
 .myframe{
-	width:100px;
-	height:100px;
-	background:#845434;
-	position:relative;
-	animation:myframe 5s infinite;
-	-webkit-animation:myfirst 5s infinite;
-	-webkit-transform-origin: 86% 15%;
-	    -ms-transform-origin: 86% 15%;
-	        transform-origin: 86% 15%;
+	width:100%;
+	height:100%;
+  padding:80px;
+	
+}
+.myframe .myframe-text{
+  width:300px;
+  height:80px;
+  line-height:80px;
+  font-size:20px;
+  color:#f8f8f8;
+  background:#845434;
+  position:relative;
+  text-align:center;
+  animation:myframe 5s infinite;
+  -webkit-animation:myframe 5s infinite;
+  -webkit-transform-origin: 86% 15%;
+      -ms-transform-origin: 86% 15%;
+          transform-origin: 86% 15%;
+}
+.logo:hover{
+  text-shadow: 0px 0px 5px #FF0000;
 }
 .logo{
 	font-size:64px;
@@ -60,7 +87,7 @@
 
 @keyframes logo{
 	from {
-		transform:rotate(-12deg);
+		transform:rotate(-30deg);
 	}
 	to {
 		transform:rotate(0deg);
@@ -68,7 +95,7 @@
 }
 @-webkit-keyframes logo{
 	from {
-		transform:rotate(-12deg);
+		transform:rotate(-30deg);
 	}
 	to {
 		transform:rotate(0deg);
@@ -77,25 +104,25 @@
 
 @keyframes unlogo{
 	40% {
-		tranform:rotate(-16deg);
+		tranform:rotate(-12deg);
 	}
 	60% {
 		transform:rotate(-8deg);
 	}
 	to {
-		transform:rotate(-20deg);
+		transform:rotate(-16deg);
 	}
 }
 
 @-webkit-keyframes unlogo{
 	40% {
-		tranform:rotate(-16deg);
+		tranform:rotate(-12deg);
 	}
 	60% {
 		transform:rotate(-8deg);
 	}
 	to {
-		transform:rotate(-20deg);
+		transform:rotate(-16deg);
 	}
 }
 
